# aoc

./: Cargo.toml  README.md
1/: Cargo.toml
1/src/: main.rs
2/: Cargo.toml
2/src/: main.rs
2019/: Cargo.toml
2019/examples/: 2019-01.rs  2019-02.rs  2019-03.rs  2019-04.rs  2019-05.rs  2019-07.rs  2019-09.rs  2019-23.rs  2019-25.rs
2019/src/: int_code.rs  lib.rs  program.rs
2019/src/io/: read.rs  write.rs
2020/: Cargo.toml
2020/examples/: 2020-04.rs  2020-05.rs  2020-06.rs  2020-07.rs  2020-10.rs  2020-13.rs  2020-19.rs  2020-21.rs  2020-24.rs  2020-25.rs
2021/: Cargo.toml
2021/examples/: 2021-01.rs  2021-02.rs  2021-04.rs  2021-05.rs  2021-06.rs  2021-07.rs
2022/: Cargo.toml
2022/examples/: 2022-01.rs  2022-02.rs  2022-03.rs  2022-04.rs
3/: Cargo.toml
3/src/: main.rs
4/: Cargo.toml
4/src/: main.rs
aoc/: Cargo.toml
aoc/src/: aoc.rs  args.rs  credentials.rs  lib.rs
examples/: 1.rs  2.rs  2019-02.rs  2019-05.rs  2019-07.rs  2019-09.rs  2019-1.rs  2019-2.rs  2019-23.rs  2019-25.rs  2019-3.rs  2019-4.rs  2019-5.rs  2019-7.rs  2019-9.rs  2020-01.rs  2020-02.rs  2020-03.rs  2020-08.rs  2020-09.rs  2020-1.rs  2020-10.rs  2020-11.rs  2020-12.rs  2020-13.rs  2020-14.rs  2020-15.rs  2020-16.rs  2020-17.rs  2020-18.rs  2020-19.rs  2020-2.rs  2020-20.rs  2020-21.rs  2020-22.rs  2020-23.rs  2020-3.rs  2020-4.rs  2020-5.rs  2020-6.rs  (+6 more)
examples/_2019/: int_code.rs  mod.rs  op_code.rs  program.rs  traits.rs
examples/_2019/io/: mod.rs  read.rs  write.rs
src/: aoc.rs  args.rs  lib.rs  main.rs  utils.rs
