[package]
name = "aoc"
version = "0.1.0"
authors = ["Callum Oz <acheronfail@gmail.com>"]
edition = "2018"

[lib]
name = "aoc_lib"
path = "src/lib.rs"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.34"
clap = "3.0.0-beta.2"
ctrlc = "3.1.7"
keytar = "0.1.3"
paste = "1.0.3"
regex = "1.4.2"
reqwest = "0.10.9"
rpassword = "5.0.0"
strum = "0.20.0"
strum_macros = "0.20.1"
tokio = { version = "0.2", features = ["full"] }
