[package]
name = "aoc"
version = "0.1.0"
authors = ["Callum Oz <acheronfail@gmail.com>"]
edition = "2018"
default-run = "aoc"

[lib]
name = "aoc_lib"
path = "src/lib.rs"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.34"
clap = "3.0.0-beta.2"
ctrlc = "3.1.7"
directories = "4.0.1"
html2text = "0.2.1"
lazy_static = "1.4.0"
paste = "1.0.3"
reqwest = "0.10.9"
rpassword = "5.0.0"
scraper = "0.12.0"
strum = "0.20.0"
strum_macros = "0.20.1"
tokio = { version = "0.2", features = ["full"] }
